data/derived/fa15/progs/unify/prog1596.ml.out
Characters 386-398:
  | Uncreative (e1, e2, e3) -> eval(e1,x,y)/2* eval(e2,x,y)/3*eval(e3,x,y)/4
                               ^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
